--- a/src/app/components/edit/edit.component.scss
+++ b/src/app/components/edit/edit.component.scss
@@ -9,6 +9,7 @@
 }
 
 .edit.content {
+  overflow: visible;
   height: calc(100% - 80px);
 }
 
